# ClusterCalculations

./: .gitignore  README.md
Lab 1/: BlockSchemaAlgorithm.cpp  BlockSchemaAlgorithm.h  CMakeLists.txt  HorisontalStripesAlgorithm.cpp  HorisontalStripesAlgorithm.h  SerialAlgorithm.cpp  SerialAlgorithm.h  VerticalStripesAlgorithm.cpp  VerticalStripesAlgorithm.h  main.cpp  report.xlsx
Lab 1/src/: Main.java
Lab 2/: CMakeLists.txt  main.cpp  report.md
Lab 3/: CMakeLists.txt  main.cpp  report.md
Lab 4/: CMakeLists.txt  main.cpp  report.xlsx
